# inno-library

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yaml
backend/: .env.example  app.py  const.py  database.py  library_services.py  models.py  router.py  security.py  service.py
backend/data/: books.json
frontend/: .env(sample)  account.py  home.py  library.py  main.py  requirements.txt
tests/e2e/: user-interaction_test.py
tests/performance/: locustfile.py
tests/unit_tests/: database_test.py  security_test.py  service_test.py
