[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["PATH242 <mennashaheen2357@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.2"
sqlalchemy = "^2.0.29"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
aiohttp = "^3.9.5"
supabase = "^2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
